Change Hibernate DDL to update for initial deployment